testing/tests/ui/since_1.54/no_template_attribute.rs
use askama::Template;

#[derive(Template)]
struct NoTemplate;

fn main() {
}
